// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component display element 1`] = `
<div
  className="page"
>
  <div
    className="page-body-md"
  >
    <form>
      <div
        className="page-body-label"
      >
        Please login
      </div>
      <div
        className="mb-4"
      >
        <input
          defaultValue="User A"
          id="username"
          name="username"
          placeholder="username"
          type="text"
        />
      </div>
      <div
        className="mb-6"
      >
        <input
          defaultValue="passa"
          id="password"
          name="password"
          type="password"
        />
      </div>
      <div
        className="page-body-buttons"
      >
        <button
          type="submit"
        >
          Login
        </button>
        <button
          className="link"
          onClick={[Function]}
          type="button"
        >
          Forgot Password?
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Login Component display element not authenticated 1`] = `
<div
  className="page"
>
  <div
    className="page-body-md"
  >
    <form>
      <div
        className="page-body-label"
      >
        Please login
      </div>
      <div
        className="mb-4"
      >
        <input
          defaultValue="User A"
          id="username"
          name="username"
          placeholder="username"
          type="text"
        />
      </div>
      <div
        className="mb-6"
      >
        <input
          defaultValue="passa"
          id="password"
          name="password"
          type="password"
        />
      </div>
      <div
        className="page-body-buttons"
      >
        <button
          type="submit"
        >
          Login
        </button>
        <button
          className="link"
          onClick={[Function]}
          type="button"
        >
          Forgot Password?
        </button>
      </div>
      <p
        className="text-white text-xs italic"
      >
        Login incorrect
      </p>
    </form>
  </div>
</div>
`;
